--- a/src/app/pages/buscar/buscar.component.html
+++ b/src/app/pages/buscar/buscar.component.html
@@ -1,1 +1,8 @@
-<p>buscar works!</p>
+<h1 class="text-capitalize">
+  Buscar Peliculas: <small>{{ texto }}</small>
+</h1>
+<div class="row">
+  <div class="col">
+    <app-peliculas-poster-grid [movies]="movies"></app-peliculas-poster-grid>
+  </div>
+</div>
