--- a/src/app/pages/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/src/app/pages/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,7 +1,14 @@
 <div class="row">
-  <div class="col-md-3 mb-5 animate__animated animate__fadeIn" *ngFor="let movie of movies">
+  <div
+    class="col-md-3 mb-5 animate__animated animate__fadeIn"
+    *ngFor="let movie of movies"
+  >
     <img
-      [src]=" movie.poster_path | poster" class="img-thumbnail img-fluid cursor" (click)="onMovieClick(movie)" [alt]="movie.title">
+      [src]="movie.poster_path | poster"
+      class="img-thumbnail img-fluid cursor"
+      (click)="onMovieClick(movie)"
+      [alt]="movie.title"
+    />
     <div>
       <h3 class="mt-2">{{ movie.title }}</h3>
       <div class="row">
@@ -9,7 +16,7 @@
            <ngb-rating style="color: yellow" [rate]="movie.vote_average"></ngb-rating>
         </div> -->
         <div class="col-2 text-white">
-          {{ movie.vote_average | number:'1.1-2' }}
+          {{ movie.vote_average | number : "1.1-2" }}
         </div>
       </div>
     </div>
