--- a/src/app/pages/pelicula/pelicula.component.html
+++ b/src/app/pages/pelicula/pelicula.component.html
@@ -4,5 +4,11 @@
   </div>
   <div class="col-md-6 mt-2">
     <h3>{{ pelicula.title }}</h3>
+    <div class="row">
+      <div class="col-10 text-white">
+        Like: {{pelicula.vote_average | number:"1.1-2"}}
+        
+      </div>
+    </div>
   </div>
 </div>
