--- a/src/app/pages/pelicula/pelicula.component.html
+++ b/src/app/pages/pelicula/pelicula.component.html
@@ -10,10 +10,16 @@
       </div>
     </div>
     <div class="row mt-3">
-  <h3 class="texto-grande">Sinopsis:</h3>
+      <h3 class="texto-grande">Sinopsis:</h3>
       <div class="col text-white text-justify">
         {{ pelicula.overview }}
       </div>
     </div>
+  </div>
+</div>
+<hr />
+<div class="row mt-5 mb-3">
+  <div class="col">
+    <app-cast-slide-show [cast]="cast"></app-cast-slide-show>
   </div>
 </div>
